# soc-intelligence-command

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
assets/: README.md
configs/: synthetic_lab.yaml
data/: README.md
docs/: methodology.md  report_template.md  response_playbooks.md  synthetic_lab.md
matlab/: plot_alert_timeline.m
notebooks/: 01_synthetic_soc_walkthrough.ipynb
scripts/: run_synthetic_soc_lab.py
src/socintel/: __init__.py  anomaly.py  config.py  correlation.py  detections.py  ledger.py  metrics.py  playbooks.py  reporting.py  schema.py  scoring.py  synthetic.py  taxonomy.py  visualization.py
tests/: test_detections.py  test_pipeline.py  test_synthetic.py
